--- a/craft_sicherungWebsite/templates/spenden/jetztspenden.html
+++ b/craft_sicherungWebsite/templates/spenden/jetztspenden.html
@@ -9,13 +9,13 @@
 {% block block1 %}
 
 <style> /* Custom style für diese nav-tabs */
-.stylevorgaben2 .nav-link.active.tab {
+ .nav-link.active.tab {
   background-color: white;
   color: #0062ae;
   font-weight: bold;
 }
 
-.stylevorgaben2 .nav-link.tab {
+ .nav-link.tab {
   padding: 2rem;
   padding-left: 0;
   padding-bottom: 0;
@@ -136,7 +136,7 @@ $( "#sel2" ).change(function() {
   </div>
 </div>
 
-<div class="container-fluid no-padding" style="background-color: #ffffff;">
+<div class="container-fluid no-padding" style="background-color: #ffffff; padding-top: 5rem;">
 
   <div class="container achterspaltenlayout" style="background-color: #ffffff; padding-bottom: 0;">
     <span id="copy"> Mit einer monatlichen Spende von </span>
@@ -184,7 +184,7 @@ $( "#sel2" ).change(function() {
 
   </div> <!-- Container fluid -->
 
-  <div class="container achterspaltenlayout" style="padding-top: 3rem;">
+  <div class="container achterspaltenlayout" style="padding: 5rem 0;">
     <h2 style="padding-bottom: 1rem;">Spendenkonto</h2>
     <div class="row" id="anleser">
       <div class="col-6">
