--- a/craft_sicherungWebsite/templates/blog/index.html
+++ b/craft_sicherungWebsite/templates/blog/index.html
@@ -8,6 +8,12 @@
 
 {% block block1 %}
 
+<style media="screen">
+  p {
+    margin-bottom: 0;
+  }
+</style>
+
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 7rem; position: relative;">
 
   <nav aria-label="breadcrumb" id="info">
@@ -28,7 +34,7 @@
 
 {% set counter = 0 %}
 
-<div class="container-fluid no-padding" style="background-color: white; padding-bottom: 2rem;">
+<div class="container-fluid no-padding" style="background-color: white; padding-bottom: 5rem;">
 
   <div class="container zwoelferspaltenlayout" style="background-color: padding-bottom: 3rem;">
     <div class="row">
@@ -38,47 +44,50 @@
         <a href="{{ 'https://aufbau-website.de/craft/web/blog/' ~ entry.slug }}">
         <img class="img-fluid" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().url }} {% endif %}" alt="blogbild" style="padding-bottom: 1rem;">
         </a>
-        <div id="info"> Veröffentlicht am {{ entry.postDate | date("M d, Y") }} - {%if entry.blogKategorie.one() is not null %} in <a href="{{ entry.blogKategorie.one().url }}">{{ entry.blogKategorie.one().title }}</a> {% endif %}
+        <div id="info"> Veröffentlicht am {{ entry.postDate | date("d M Y") }} - {%if entry.blogKategorie.one() is not null %} in <a href="{{ entry.blogKategorie.one().url }}">{{ entry.blogKategorie.one().title }}</a> {% endif %}
         {%if entry.blogKategorie.inReverse().one() is not null %} und <a href="{{ entry.blogKategorie.inReverse().one().url }}">{{ entry.blogKategorie.inReverse().one().title }}</a> {% endif %}</div>
         <!-- Mit der oberen Zeile wird die Kategorie des Artikels abgerufen und angezeigt und sofort klickbar -->
         <a href="{{ 'https://aufbau-website.de/craft/web/blog/' ~ entry.slug }}">
         <h2 style="padding-bottom: 0;"> {{ entry.title}}</h2>
         </a>
-        <div id="copy" style="padding-top: 1rem; padding-bottom: 3.5rem;"> {{ entry.anleser }}
-        <a href="{{ 'https://aufbau-website.de/craft/web/blog/' ~ entry.slug }}"> Weiterlesen</a> </div>
+        <div id="copy" style="padding-top: 0; padding-bottom: 5rem;"> {{ entry.anleser }}
+        <a href="{{ 'https://aufbau-website.de/craft/web/blog/' ~ entry.slug }}"> Weiterlesen</a>
+        </div>
         {% set counter = counter + 1 %}
         {% endfor %}
         <div id="div1">  </div>
-        <button type="button" class="btn btn-primary mx-auto d-block" onclick="mehrLadenAjax()"> Weitere Beiträge laden</button>
+        <button id="Laden" type="button" class="btn btn-primary mx-auto d-block" onclick="mehrLadenAjax()"> Weitere Beiträge laden</button>
       </div> <!-- Kurzansicht der Einträge mit Bild -->
 
 
 <script>
 {% set entries = craft.entries.section('blog').level('1').offset(3) %}
 
+var eintraege = [];
+{% for entry in entries %} //Alle Zitate werden in ein Feld kopiert aus Craft
+  var eintrag = { slug: "{{entry.slug}}", datum: "{{ entry.postDate | date("d M Y") }}", kategorie: "{{entry.blogKategorie.one().title}}", kategorieUrl: "{{entry.blogKategorie.one().url}}", title: "{{entry.title}}", anleser: "{{entry.anleser}}", bild: "{{entry.bild.one().url}}"};
+  eintraege.push(eintrag);
+{% endfor %}
+
 function mehrLadenAjax() {
-
-  var eintraege = [];
-
-  {% for entry in entries %} //Alle Zitate werden in ein Feld kopiert aus Craft
-    var eintrag = { slug: "{{entry.slug}}", kategorie: "{{entry.blogKategorie.one().title}}", title: "{{entry.title}}", anleser: "{{entry.anleser}}", bild: "{{entry.bild.one().url}}"};
-    eintraege.push(eintrag);
-  {% endfor %}
 
   var durchlaeufe = 0;
   if (eintraege.length > 3) { durchlaeufe = 3;  } else { durchlaeufe = eintraege.length }
 
   for (i = 0; i < durchlaeufe; i++) {
-    $("#div1").append("<img src=" + eintraege[i].bild + "> </img>");
-    $("#div1").append("<h2>" + eintraege[i].title + "</h2>");
-    $("#div1").append("<p>" + eintraege[i].anleser + "</p>");
+    $("#div1").append("<img class=\"img-fluid\" style=\"padding-bottom: 1rem;\" src=" + eintraege[i].bild + "> </img>");
+    $("#div1").append("<div id=\"info\"> Veröffentlicht am " + eintraege[i].datum + " - in <a href=\"" + eintraege[i].kategorieUrl + "\">" + eintraege[i].kategorie + "</a></div>");
+    $("#div1").append("<h2 style=\"padding-bottom: 0;\">" + eintraege[i].title + "</h2>");
+    $("#div1").append("<div style=\"padding-bottom: 5rem;\" id=\"copy\">" + eintraege[i].anleser + "<a href=\"https://aufbau-website.de/craft/web/blog/" + eintraege[i].slug +"\"> Weiterlesen</a> </div>");
     //$("#div1").html("<img src=" + eintraege[i].bild + "> </img>");
 }
-for (i = 0; i < durchlaeufe; i++) { //Loeschen des ersten Elementes
+for (i = 0; i < durchlaeufe; i++) { //Loeschen der ersten drei angezeigten Elemente
   eintraege.shift();
 }
-
-  $("#div1").load("../templates/blog/demo_test.html h2");
+if (eintraege.length == 0) {
+  $("#Laden").css("visibility", "hidden");
+  $("#Laden").css("display", "none");
+}
 }
 
 </script>
