--- a/craft_sicherungWebsite/templates/spenden/schenkenundspenden.html
+++ b/craft_sicherungWebsite/templates/spenden/schenkenundspenden.html
@@ -8,6 +8,12 @@
 
 {% block block1 %}
 
+<style media="screen">
+  h2 {
+    padding-bottom: 1.5rem;
+  }
+</style>
+
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 7rem; padding-bottom: 3rem;">
 
   <nav aria-label="breadcrumb" id="info">
@@ -17,7 +23,7 @@
     </ol>
   </nav>
 
-  <div class="container achterspaltenlayout" style="padding-top:0px; background-image: url({{ craft.assets.filename('chance-ev-spenden-allgemein-icon.png').one().getUrl() }}); background-repeat: no-repeat;">
+  <div class="container achterspaltenlayout" style="padding-top:0px; padding-bottom: 5rem; background-image: url({{ craft.assets.filename('chance-ev-spenden-allgemein-icon.png').one().getUrl() }}); background-repeat: no-repeat;">
     {% set entry = craft.entries.section('spenden').slug('partnerland').one() %}
     <div>
       <h1 style="padding-bottom: 3rem;"> Geben Sie Menschen eine Chance!  </h1>
@@ -25,8 +31,8 @@
   </div>
 </div>
 
-<div class="container-fluid no-padding" style="background-image: url({{ entry.bild.one().url }}); padding-bottom: 30px; background-repeat: no-repeat; background-color: white;">
-  <div class="container zwoelferspaltenlayout" style="background-color: white; padding-left: 0; padding-right: 0;">
+<div class="container-fluid no-padding" style="padding-top: 5rem; padding-bottom: 5rem; background-image: url({{ entry.bild.one().url }}); background-repeat: no-repeat;">
+  <div class="container" style="background-color: white; width: 61vw; padding-top: 5rem; padding-left: 0; padding-right: 0;">
 
     {% set entry = craft.entries.section('spenden').slug('spenden-und-schenken').one() %}
     <div id="copy" style="padding-left: 3rem; padding-right: 3rem;"> {{ entry.text }}</div>
@@ -37,9 +43,10 @@
       <div class="col-sm-5"> <img class="img-fluid" style="padding-bottom: 0;" src=" {% if entry.bild2.one() is not null %} {{ entry.bild2.one().url }} {% endif %}" alt="schenken2">   </div>
     </div>
 
-    <div id="copy" style="padding-left: 3rem; padding-right: 3rem;"> {{ entry.zusatzfeld1 }} </div>
+    <div id="copy" style="padding-left: 3rem; padding-right: 3rem;"> {{ entry.zusatzfeld1 }}
+    </div>
 
-    <img class="img-fluid" src="{% if entry.bild3.one() is not null %} {{ entry.bild3.one().url }} {% endif %}" alt="schenken2">
+    <img class="img-fluid" style="padding-top: 4rem; padding-bottom: 0;" src="{% if entry.bild3.one() is not null %} {{ entry.bild3.one().url }} {% endif %}" alt="schenken2">
 </div>
 </div>
 
