Impressum und Datenschutz fertig und navbar-active geht jetzt

--- a/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -39,13 +39,13 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar" style="justify-content: center;">  <!-- Sehr wichtiger justify-content: center-->
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="https://aufbau-Website.de/craft/web/" id="naviUeberschrift"> HOME </a>
+            <a class="nav-link" href="https://aufbau-Website.de/craft/web/" id="home"> HOME </a>
           </li>
 
           <div class="dropdown">
             <li class="nav-item dropdown" >
               <a class="nav-link" data-toggle="dropdown"
-              href="https://aufbau-Website.de/craft/web/ueberUns" id="naviUeberschrift"> ÜBER UNS </a>
+              href="https://aufbau-Website.de/craft/web/ueberUns" id="ueberUns"> ÜBER UNS </a>
               <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu" id="naviSubmenu">
                 <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/ueberUns/arbeitsweise.html"> Arbeitsweise</a> </li>
                 <li class="dropdown-divider"></li>
@@ -70,7 +70,7 @@
           <div class="dropdown">
             <li class="nav-item dropdown">
               <a class="nav-link" data-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false" href="https://aufbau-Website.de/craft/web/projekte" id="naviUeberschrift"> PROJEKTE </a>
+              aria-expanded="false" href="https://aufbau-Website.de/craft/web/projekte" id="projekte"> PROJEKTE </a>
 
               <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu" id="naviSubmenu">
                 <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/projekte/wowirarbeiten.html"> Wo wir arbeiten</a> </li>
@@ -103,7 +103,7 @@
           <div class="dropdown">
             <li class="nav-item dropdown">
               <a class="nav-link" data-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false" href="https://aufbau-Website.de/craft/web/spenden" id="naviUeberschrift"> SPENDEN </a>
+              aria-expanded="false" href="https://aufbau-Website.de/craft/web/spenden" id="spenden"> SPENDEN </a>
               <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu" id="naviSubmenu">
                 <li class="dropdown-submenu">
                   <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden">Übersicht Spenden</a>
@@ -126,7 +126,7 @@
             <div class="dropdown">
               <li class="nav-item dropdown">
                 <a class="nav-link" data-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false" href="https://aufbau-Website.de/craft/web/fuerSie" id="naviUeberschrift"> FÜR SIE </a>
+                aria-expanded="false" href="https://aufbau-Website.de/craft/web/fuerSie" id="fuerSie"> FÜR SIE </a>
 
                 <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu" id="naviSubmenu">
                   <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/fuerSie/chancekommt.html"> Chance e.V. kommt zu Ihnen</a> </li>
@@ -167,10 +167,10 @@
               </ul>
             </div>
             <li class="nav-item">
-              <a class="nav-link" href="https://aufbau-Website.de/craft/web/blog" id="naviUeberschrift"> BLOG </a>
+              <a class="nav-link" href="https://aufbau-Website.de/craft/web/blog" id="blog"> BLOG </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://aufbau-Website.de/craft/web/kontakt" id="naviUeberschrift"> KONTAKT </a>
+              <a class="nav-link" href="https://aufbau-Website.de/craft/web/kontakt" id="kontakt"> KONTAKT </a>
             </li>
 
           </ul>
