--- a/craft_sicherungWebsite/web/CSSundJS/navbarCSS.css
+++ b/craft_sicherungWebsite/web/CSSundJS/navbarCSS.css
@@ -1,50 +1,83 @@
-.navbarCSSNeu {
-  /* Der graue Balken für die Navbar wird damit gestylt */
-  /*Das geforderte Padding der dropdown-Navbar, also nicht der immer sichtbaren Leiste.*/
-  /* Der Abstand zwischen den einzelnen Links wird verkleinert von der Hauptleiste */
-  /* Alle dropdownMenus, die ein nav-item als Vater haben, sollen beim hovern schon angezeigt werden */
-  /* Alle dropdown-menüs auswählen, die ein submenu als Vater haben
- (Im Code wird ein Untermenu zuvor mit einem Submenu bekanntgemacht)
- Also alles Untermenus werden ausgewählt. Dann werden sie so verschoben,
- dass sie rechts von dem Vatermenü sind */
-  /* Block-Boxen nehmen die gesamte Breite des Elternelementes ein */
-}
+
+/*Einfärben der aktiven Links zu blau */
 .navbar-light .navbar-nav .nav-link.active {
   color: #0062ae;
 }
-.navbarCSSNeu .rectangle {
+
+/* Der graue Balken für die Navbar wird damit gestylt */
+.rectangle {
   height: 70px;
   background-color: #f8f5f2;
   padding-top: 0px;
   margin-top: -30px;
 }
-.navbarCSSNeu #collapsibleNavbar {
-  margin-top: -40px;
+#collapsibleNavbar {
+  margin-top: -68px;
 }
-.navbarCSSNeu .dropdown-menu {
-  padding-top: 40px;
-  padding-bottom: 20px;
+
+.navbar-brand {
+  padding: 0;
+}
+
+.multi-level .dropdown-divider {
+  margin: 0 20px;
+  border-top-color: #f1ebe5;
+}
+
+
+/*Das geforderte Padding der dropdown-Navbar, also nicht der immer sichtbaren Leiste.*/
+.dropdown-menu {
+  padding: 23px 0; /* Padding oben und unten 23, da die dropdown-items schon 7 oben haben */
   border-radius: 0 0 0 0;
   border: none;
 }
-.navbarCSSNeu .dropdown-item a {
+.dropdown-item a {
   color: #333333;
 }
-.navbarCSSNeu .dropdown-item:hover {
+
+.pfeil {
+  border:solid 10px transparent;
+  border-bottom-color:blue;
+  display: none;
+}
+.nav-item:hover > .pfeil {
+  display: block;
+}
+
+.dropdown-item {
+  padding: 7px 20px;
+}
+
+.dropdown-item:hover {
   background-color: #e3d7cb;
   color: #0062ae;
+  text-decoration: none;
 }
-.navbarCSSNeu .dropdown-menu > li {
+
+.dropdown-item a:hover {
+color: #0062ae;
+text-decoration: none;
+}
+
+/* Der Abstand zwischen den einzelnen Links wird verkleinert von der Hauptleiste */
+.dropdown-menu > li {
   margin-top: 0px;
   margin-bottom: 0px;
 }
-.navbarCSSNeu .nav-item:hover > .dropdown-menu {
-  display: inital;
-  left: inital;
-  transform: translateX(0%);
-  margin-top: 0px;
+
+/* Alle dropdownMenus, die ein nav-item als Vater haben, sollen beim hovern schon angezeigt werden */
+.nav-item:hover > .dropdown-menu {
+  display: block;
+  margin-top: -5px;
+  left: 50%;
+  transform: translateX(-50%);
 }
-.navbarCSSNeu .dropdown-submenu > .dropdown-menu {
+
+/* Alle dropdown-menüs auswählen, die ein submenu als Vater haben
+(Im Code wird ein Untermenu zuvor mit einem Submenu bekanntgemacht)
+Also alles Untermenus werden ausgewählt. Dann werden sie so verschoben,
+dass sie rechts von dem Vatermenü sind */
+.dropdown-submenu > .dropdown-menu {
   top: 0;
   left: 100%;
   height: 100%;
@@ -53,14 +86,24 @@
   border-radius: 0 0 0 0;
   background-color: #e3d7cb;
 }
-.navbarCSSNeu .dropdown-submenu:hover > .dropdown-menu {
+
+/* Block-Boxen nehmen die gesamte Breite des Elternelementes ein */
+.dropdown-submenu:hover > .dropdown-menu {
   display: block;
 }
-@media all and (min-width: 993px) {
-  .navbarCSSNeu .nav-item:hover > .dropdown-menu {
-    display: block;
-    margin-top: -5px;
-    left: 50%;
-    transform: translateX(-50%);
-  }
+
+/*Die Schriftgrößen für die verschiedenen Menüs */
+.navbar-light .navbar-nav .nav-link  {
+  font-size: 16px;
+  line-height: 22px;
+  color: #333333;
+  font-family: 'source_sans_probold';
+  letter-spacing: 1px;
+}
+
+#naviSubmenu{
+  font-size: 16px;
+  line-height: 22px;
+  color: #333333;
+  font-family: 'source_sans_proregular';
 }
