hinzufügen der pfeile in der navbar und hochladen von bildern und co

--- a/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -45,6 +45,7 @@
             <li class="nav-item dropdown" >
               <a class="nav-link" data-toggle="dropdown"
               href="https://aufbau-Website.de/craft/web/ueberUns" id="ueberUns"> ÜBER UNS </a>
+              <div class="pfeil">  </div>
               <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu" id="naviSubmenu">
                 <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/ueberUns"> Übersicht Über uns</a> </li>
                 <li class="dropdown-divider"></li>
@@ -70,6 +71,8 @@
               <a class="nav-link" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false" href="https://aufbau-Website.de/craft/web/projekte" id="projekte"> PROJEKTE </a>
 
+              <div class="pfeil">  </div>
+
               <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu" id="naviSubmenu">
                 <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/projekte"> Übersicht Projekte </a> </li>
                 <li class="dropdown-divider"></li>
@@ -91,6 +94,7 @@
                 <li class="dropdown-item">
                   <a  href="https://aufbau-Website.de/craft/web/projekte/erfahrungsberichte.html">Erfahrungsberichte</a>
                 </li>
+                <li class="dropdown-divider"></li>
                 <li class="dropdown-item">
                   <a  href="https://aufbau-Website.de/craft/web/projekte/projektberichte.html">Projektberichte</a>
                 </li>
@@ -102,6 +106,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false" href="https://aufbau-Website.de/craft/web/spenden" id="spenden"> SPENDEN </a>
+              <div class="pfeil">  </div>
               <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu" id="naviSubmenu">
                 <li class="dropdown-item">
                   <a href="https://aufbau-Website.de/craft/web/spenden">Übersicht Spenden</a>
@@ -129,10 +134,8 @@
               <li class="nav-item dropdown">
                 <a class="nav-link" data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false" href="https://aufbau-Website.de/craft/web/fuerSie" id="fuerSie"> FÜR SIE </a>
-
-
+                <div class="pfeil">  </div>
                 <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu" id="naviSubmenu">
-
                   <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/fuerSie"> Übersicht Für Sie </a> </li>
                   <li class="dropdown-divider"></li>
                   <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/fuerSie/chancekommt.html"> Chance e.V. kommt zu Ihnen</a> </li>
@@ -149,6 +152,7 @@
                       <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/erfahrungsberichte.html">Erfahrungsberichte</a></li>
                     </ul>
                   </li>
+                  <li class="dropdown-divider"></li>
                   <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/fuerSie/projektbesuch.html">Projektbesuch</a> </li>
                   <li class="dropdown-divider"></li>
                   <li class="dropdown-submenu">
@@ -161,7 +165,7 @@
                       <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/fuerSie/daheim/blumen.html">Bäume für Kenia statt Blumen für Euro</a></li>
                     </ul>
                   </li>
-
+                  <li class="dropdown-divider"></li>
                   <li class="dropdown-item"> <a href="https://aufbau-website.de/craft/web/fuerSie/presse">Presse und Downloads</a> </li>
                   <li class="dropdown-divider"></li>
                   <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/fuerSie/literaturtipps.html">Literaturtipps</a> </li>
