--- a/craft_sicherungWebsite/templates/index.html
+++ b/craft_sicherungWebsite/templates/index.html
@@ -67,10 +67,10 @@
     {% set entries = craft.entries.section('home').slug('zitate-home').one().children().all() %}
     {% set entry = random(entries) %}
 
-    <hr style="background-color: #ed6e2c; height: 1px; margin: 1rem 0rem;">
+    <hr style="background-color: #ed6e2c; margin: 1rem 0rem;">
     <div id="zitat"> {{ entry.anleser }}  </div>
     <div id="autor" > {{ entry.title }}  </div>
-    <hr style="background-color: #ed6e2c; height: 1px; margin: 1rem 0rem;">
+    <hr style="background-color: #ed6e2c; margin: 1rem 0rem;">
 
     {% set entry = random(entries) %}
     <script> /*Zufälliges Zitat nach 3 Sekunden ändern */
