--- a/craft_sicherungWebsite/templates/projekte/index.html
+++ b/craft_sicherungWebsite/templates/projekte/index.html
@@ -50,7 +50,9 @@
           <div class="col-lg-4 col-md-6 col-sm-6" style="padding-bottom: 40px; padding-right: 5px; padding-left: 5px;">
 
           <div class="card border-light h-100">
+            <a href="{{'https://aufbau-website.de/craft/web/projekte/' ~ entry.slug}}">
             <img class="card-img-top"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
+            </a>
             <div class="card-body">
                 <h3>{{ entry.title }}</h3>
                 <div id="copy"> {{ entry.text }} </div>
