--- a/craft_sicherungWebsite/templates/projekte/projektberichte.html
+++ b/craft_sicherungWebsite/templates/projekte/projektberichte.html
@@ -36,11 +36,13 @@
         {% for entry in entries %}
         <div class="col-lg-4 col-md-6 col-sm-6" style="padding-bottom: 40px; padding-left: 5px; padding-right: 5px;">
         <div class="card border-light h-100">
-          <img class="card-img-top"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
-          <div id="copy" class="card-body">
-              <h3>{{ entry.title }}</h3>
-              <div> {{ entry.anleser }} </div>
-              <a href="{{ 'https://aufbau-website.de/craft/web/projekte/projektberichte/' ~ entry.slug }}"> {{ entry.nurDerLink }}</a>
+        <a href="{{ 'https://aufbau-website.de/craft/web/projekte/projektberichte/' ~ entry.slug }}">
+      <img class="card-img-top"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
+        </a>
+        <div id="copy" class="card-body">
+            <h3>{{ entry.title }}</h3>
+            <div> {{ entry.anleser }} </div>
+            <a href="{{ 'https://aufbau-website.de/craft/web/projekte/projektberichte/' ~ entry.slug }}"> {{ entry.nurDerLink }}</a>
           </div>
         </div>
       </div>
