lastschrift hinzufügen, Jens verbesserungen einarbeiten

--- a/craft_sicherungWebsite/templates/_layouts/footer.html
+++ b/craft_sicherungWebsite/templates/_layouts/footer.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-lg-8 col-md-0">  </div>
     <div class="col-lg-4 col-md-11">
-      <a href="www.mein-regenwald.de" class="btn btn-success">Der Chance-Regenwald <br> <strong>www.mein-regenwald.de</strong></a>
+      <a href="www.mein-regenwald.de" class="btn btn-success">Der Chance-Regenwald <br> <strong>https://www.mein-regenwald.de</strong></a>
     </div>
   </div>
 </div>
