--- a/craft_sicherungWebsite/templates/projekte/_entry/projektberichtlang.html
+++ b/craft_sicherungWebsite/templates/projekte/_entry/projektberichtlang.html
@@ -27,7 +27,7 @@
 <style>
 
     @media all and (max-width: 1200px) {
-      .stylevorgaben2 #erfahrungsbericht {
+      #erfahrungsbericht {
         display: none;
       }
     }
@@ -52,7 +52,7 @@
 </div>
 
 
-<div class="container zwoelferspaltenlayout">
+<div class="container zwoelferspaltenlayout" style="padding-bottom: 4.5rem;">
 
   <hr> <p class="text-center" id="anleser" style="padding-top: 2rem;"> Weitere Projektberichte</p>
   {% set slugUrsprung = entry.slug %}
@@ -78,7 +78,7 @@
 
 {% set entry = craft.entries.section('spendenfelderUndSo').slug('paten-dringend-gesucht').one() %}
 
-<div class="container-fluid no-padding"  style="background-image: url({{ entry.bild.one().url }});">
+<div class="container-fluid"  style="background-image: url({{ entry.bild.one().url }}); padding: 3rem 0;">
   <div class="row">
     <div class="col-sm-2">  </div>
     <div class="col-lg-2 col-md-3">   <img class="img-fluid rounded-circle mx-auto d-block" src="{{ entry.bild2.one().url }}" style="max-height: 150px; padding:0;"> </div>
@@ -86,12 +86,20 @@
     <div class="col-sm-6">
       <h4 style="color: white;"> {{ entry.title }} </h4>
       <div id="copy" style="color: white;"> {{ entry.text }}</div>
+      <div class="row">
+        <div class="col-sm-4">
+          <a href="https://aufbau-website.de/craft/web/spenden/patewerden.html" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Kinderpate plus in Peru werden</a>
+        </div> <div class="col-sm-2">  </div>
+        <div class="col-sm-6">
+          <a href="https://aufbau-website.de/craft/web/spenden/patewerden.html" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Kinderpate plus in Kenia werden</a>
+        </div>
+      </div>
     </div>
   </div>
 </div> <!-- Der orange Berg mit dem Spendenaufruf -->
 
 
-<div class="container-fluid no-padding" style="background-color: white; padding-bottom: 3rem;">
+<div class="container-fluid no-padding" style="background-color: white; padding-bottom: 5rem; padding-top: 3rem;">
 
 <div class="container zwoelferspaltenlayout" style="padding-top: 0px;">
 <p id="anleser" class="text-center"> Das könnte Sie auch interessieren </p>
