--- a/craft_sicherungWebsite/templates/spenden/jetztspenden.html
+++ b/craft_sicherungWebsite/templates/spenden/jetztspenden.html
@@ -129,7 +129,7 @@ $( "#sel2" ).change(function() {
         <button type="button" class="close" data-dismiss="modal">&times;</button> <br>
         <h2>Weiterleitung zur KD-Bank</h2>
         <span id="copy">Spenden Sie online und geben Sie Menschen eine Chance - ganz einfach, schnell und sicher über unseren Online-Spendenservice der Bank für Kirche und Diakonie</span>
-        <br> <a style="margin-top: 3rem;" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary"> Jetzt bei der KD Bank spenden </a>
+        <br> <a style="margin-top: 3rem;" href="https://www.kd-onlinespende.de/projekt/Indianerselbsthilfe/display/link.html" class="btn btn-primary"> Jetzt bei der KD Bank spenden </a>
       </div>
 
     </div>
