--- a/craft_sicherungWebsite/templates/fuerSie/chancekommt.html
+++ b/craft_sicherungWebsite/templates/fuerSie/chancekommt.html
@@ -11,9 +11,9 @@
 
 <style>
  hr {
-  border-width: 2px;
+  border-width: 1px;
 }
-
+h3 { padding-bottom: 1rem; }
  h2 {
   padding-bottom: .5rem;
 }
@@ -41,10 +41,10 @@
 
   <div class="container achterspaltenlayout" id="copy">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6" style="padding: 0 2rem;">
         {{ entry.zusatzfeld1 }}
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6" style="padding: 0 2rem;">
         {{ entry.text }}
       </div>
     </div>
