--- a/craft_sicherungWebsite/templates/ueberUns/konzept.html
+++ b/craft_sicherungWebsite/templates/ueberUns/konzept.html
@@ -28,7 +28,7 @@
 </div>
 
 
-<div class="container-fluid no-padding" style="background-color: #ffffff; padding-bottom: 3rem;">
+<div class="container-fluid no-padding" style="background-color: #ffffff; padding-bottom: 5rem; padding-top: 0;">
 
 <div class="container zwoelferspaltenlayout">
 
