--- a/craft_sicherungWebsite/templates/kontakt/index.html
+++ b/craft_sicherungWebsite/templates/kontakt/index.html
@@ -198,14 +198,14 @@
   </div><!-- Umgebender Container -->
 </div>
 
-<style> /* Custom style für diese nav-tabs */
-.stylevorgaben2 .nav-link.active.tab {
+<style> /* Custom style für diese nav-tabs für die spenden-box */
+ .nav-link.active.tab {
   background-color: transparent;
   color: white;
   font-weight: bold;
 }
 
-.stylevorgaben2 .nav-link.tab {
+ .nav-link.tab {
   font-size: 30px;
   background-color: transparent;
   color: white;
