--- a/craft_sicherungWebsite/templates/spenden/index.html
+++ b/craft_sicherungWebsite/templates/spenden/index.html
@@ -19,18 +19,18 @@
 {% block block1 %}
 <style media="screen"> /*Anpassen der Spendennavbar an die Vorgabe */
 
-.stylevorgaben2 .rectangle {
+ .rectangle {
   height: 70px;
   background-color: #ed6e2c;
   }
 
-.stylevorgaben2 #naviUeberschrift {
+ #naviUeberschrift {
   font-size: 16px;
   line-height: 22px;
   color: white;
   font-family: 'source_sans_probold';
 }
-
+.navbar-light .navbar-nav .nav-link.active { color: white; }
 </style>
 
 
