--- a/craft_sicherungWebsite/templates/fuerSie/daheim/consumermission.html
+++ b/craft_sicherungWebsite/templates/fuerSie/daheim/consumermission.html
@@ -128,7 +128,7 @@ hr {
 
 <div class="container-fluid no-padding" style="background-color: white; padding: 5rem 0rem;">
 
-  <p id="anleser" class="text-center" style="padding-bottom: 5rem;"> Was sie daheim tun können </p>
+  <p id="anleser" class="text-center" style="padding-bottom: 5rem;"> Einige ganz alltägliche Konsumthemen haben wir für sie recherchiert: </p>
 
   {% set entry = craft.entries.section('fuerSie').slug('kaffee-unsere-tägliche-chance').one() %}
   {% include '_layouts/weiterleitungkorrekt' %}
