--- a/craft_sicherungWebsite/templates/projekte/_entry/freiwilligenberichte.html
+++ b/craft_sicherungWebsite/templates/projekte/_entry/freiwilligenberichte.html
@@ -34,8 +34,8 @@
   </div>
 </div>
 
-<div class="container zwoelferspaltenlayout" style="padding-top: 0;">
-  <hr> <div id="copy" class="text-center" style="padding-bottom: 3rem; padding-top: 1rem;"> Weitere Erfahrungsberichte  </div>
+<div class="container zwoelferspaltenlayout" style="padding-top: 2rem; padding-bottom: 4.5rem;">
+  <hr> <div id="copy" class="text-center" style="padding-bottom: 3rem; padding-top: 4rem;"> Weitere Freiwilligenberichte  </div>
 
 <div class="card-columns">
 
@@ -65,21 +65,10 @@
   </div>
 </div>
 
-{% set entry = craft.entries.section('spendenfelderUndSo').slug('paten-dringend-gesucht').one() %}
+{% include '_layouts/codeschnipsel/spendenaufrufkindrund' %}
 
-<div class="container-fluid no-padding"  style="background-image: url({{ entry.bild.one().url }});">
-  <div class="row">
-    <div class="col-sm-2">  </div>
-    <div class="col-lg-2 col-md-3">   <img class="img-fluid rounded-circle mx-auto d-block" src="{{ entry.bild2.one().url }}" style="max-height: 150px; padding:0;"> </div>
-    <div class="col-sm-1">  </div>
-    <div class="col-sm-6">
-      <h4 style="color: white;"> {{ entry.title }} </h4>
-      <div id="copy" style="color: white;"> {{ entry.text }}</div>
-    </div>
-  </div>
-</div> <!-- Der orange Berg mit dem Spendenaufruf -->
 
-<div class="container-fluid no-padding" style="background-color: white; padding-top: 0;">
+<div class="container-fluid no-padding" style="background-color: white; padding-top: 0; padding-bottom: 5rem;">
 
     <div class="container zwoelferspaltenlayout text-center" style="margin-top: 0;">
      <div id="anleser" style="padding-bottom: 3rem;"> Weitere Informationen zum Freiwilligendienst </div>
@@ -87,7 +76,6 @@
 
     {% set entry = craft.entries.section('fuerSie').slug('deine-bewerbung').one() %}
     {% include '_layouts/weiterleitungkorrekt' %}
-    <div style="padding-bottom: 4rem;"></div>
 
   </div>
 
