--- a/craft_sicherungWebsite/web/CSSundJS/navbarCSS.css
+++ b/craft_sicherungWebsite/web/CSSundJS/navbarCSS.css
@@ -111,3 +111,7 @@ dass sie rechts von dem Vatermenü sind */
   color: #333333;
   font-family: 'source_sans_proregular';
 }
+
+.navbar-light .navbar-nav .nav-link:hover {
+  color: #0062ae;
+}
